Implement running LIRICAL analysis.